--- a/public/css/app.css
+++ b/public/css/app.css
@@ -814,6 +814,12 @@ select {
 .w-11\/12 {
   width: 91.666667%;
 }
+.w-36 {
+  width: 9rem;
+}
+.w-28 {
+  width: 7rem;
+}
 .w-48 {
   width: 12rem;
 }
@@ -1215,10 +1221,6 @@ select {
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
